--- a/search.htm
+++ b/search.htm
@@ -19,7 +19,7 @@
     </center>
     <p>
     <center>
-        <input type="submit" onclick="send()" value="搜索" height="10px" class="submit" />
+        <input type="submit" onclick="send()" value="search" height="1px" class="submit" />
         
         <div id="res"></div>
     </center>
